Add GitHub owner import selection (#672)
* Add GitHub owner import selection


* Address PR review feedback


---------
